Fixed styling where search overflowed search icon

--- a/src/SearchBar.scss
+++ b/src/SearchBar.scss
@@ -19,7 +19,7 @@
         height: 1.8rem;
         border-radius: 1.8rem;
         border: none;
-        padding: 0 1rem;
+        padding: 0 2rem 0 1rem;
         text-align: center;
         font-size: var(--font-size-reg);
     }
